Добавил два поля в модель и секции Style и Script во view Index

--- a/FinDesk2/Views/Issue/Details.cshtml
+++ b/FinDesk2/Views/Issue/Details.cshtml
@@ -13,6 +13,8 @@
     <p>Дата: @Model.IssueTS</p>
     <p>Категория: @Model.Category</p>
     <p>Статус: @Model.Status</p>
+    <p>Дата Решения: @Model.SolveTS</p>
+    <p>Описание Решения: @Model.SolveDescr</p>
 </div>
 <a asp-controller="Issue" asp-action="Index">Задачи</a>
 
