--- a/FinDesk2/Views/Issue/Details.cshtml
+++ b/FinDesk2/Views/Issue/Details.cshtml
@@ -15,6 +15,7 @@
     <p>Статус: @Model.Status</p>
     <p>Дата Решения: @Model.SolveTS</p>
     <p>Описание Решения: @Model.SolveDescr</p>
+    <p>Сотрудник: @Model.SolveUser</p>
 </div>
 <a asp-controller="Issue" asp-action="Index">Задачи</a>
 
