Создание нового Issue

--- a/FinDesk2/Views/Issue/Index.cshtml
+++ b/FinDesk2/Views/Issue/Index.cshtml
@@ -9,6 +9,9 @@
 
     <h3>@ViewData["Title"]</h3>
 
+    <a asp-action="Edit" class="btn btn-success">Создать через Edit</a>
+    <a asp-action="Create" class="btn btn-success">Создать через Create</a>
+
     <table class="table table-bordered" id="st_issue_table">
         <thead>
             <tr>
