--- a/FinDesk2/Views/Issue/Create.cshtml
+++ b/FinDesk2/Views/Issue/Create.cshtml
@@ -14,7 +14,7 @@
                 <form asp-action="Create" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                        <input asp-for="Id" type="hidden" class="form-control" />
+                    <input asp-for="Id" type="hidden" class="form-control" />
 
                     <div class="form-group">
                         <label asp-for="User" class="control-label"></label>
@@ -25,6 +25,11 @@
                         <label asp-for="IssueTS" class="control-label"></label>
                         <input asp-for="IssueTS" class="form-control" />
                         <span asp-validation-for="IssueTS" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="IssueType" class="control-label"></label>
+                        <input asp-for="IssueType" class="form-control" />
+                        <span asp-validation-for="IssueType" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Category" class="control-label"></label>
