--- a/FinDesk2/Views/Issue/Delete.cshtml
+++ b/FinDesk2/Views/Issue/Delete.cshtml
@@ -31,6 +31,12 @@
                     @Html.DisplayFor(model => model.IssueTS)
                 </dd>
                 <dt>
+                    @Html.DisplayNameFor(model => model.IssueType)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.IssueType)
+                </dd>
+                <dt>
                     @Html.DisplayNameFor(model => model.Category)
                 </dt>
                 <dd>
