--- a/FinDesk2/Views/Issue/Index.cshtml
+++ b/FinDesk2/Views/Issue/Index.cshtml
@@ -18,6 +18,7 @@
                 <td>Id</td>
                 <td>Issue Time</td>
                 <td>Creater</td>
+                <td>Type</td>
                 <td>Category</td>
                 <td>Status</td>
                 <td>Solve Time</td>
@@ -34,6 +35,7 @@
                 <td>@issue.Id</td>
                 <td>@issue.IssueTS</td>
                 <td>@issue.User</td>
+                <td>@issue.IssueType</td>
                 <td>@issue.Category</td>
                 <td>@issue.Status</td>
                 <td>@issue.SolveTS</td>
