--- a/FinDesk2/Views/_ViewImports.cshtml
+++ b/FinDesk2/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using FinDesk2
 @using FinDesk2.Models
 @using FinDesk2.ViewModels
+@using FinDesk2.ViewModels.Identity
  
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
