--- a/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -1,6 +1,4 @@
-﻿<vc:user-info/>
-
-@*<div class="mainmenu pull-left">
+﻿<div class="mainmenu pull-left">
     <ul class="nav navbar-nav collapse navbar-collapse">
         <li><a asp-controller="Home" asp-action="Index" class="active">Главная</a></li>
         <li class="dropdown">
@@ -20,7 +18,7 @@
         <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
         <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
         <li><a asp-controller="Issue" asp-action="Index">Issues</a></li>
-        <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
-        <li><a asp-controller="Home" asp-action="Register">Регистрация</a></li>
+        <li><a asp-controller="Account" asp-action="Logout">Выход</a></li>
+        <li><a asp-controller="Account" asp-action="Register">Профиль</a></li>
     </ul>
-</div>*@
+</div>
