--- a/FinDesk2/Views/Shared/Partial/_MainMenu.cshtml
+++ b/FinDesk2/Views/Shared/Partial/_MainMenu.cshtml
@@ -1,4 +1,4 @@
-﻿<vc:user-info/>
+﻿<vc:user-info />
 
 @*<div class="mainmenu pull-left">
     <ul class="nav navbar-nav collapse navbar-collapse">
@@ -16,11 +16,12 @@
                 <li><a asp-controller="Home" asp-action="BlogSingle">Блог магазина</a></li>
             </ul>
         </li>
-        <li><a asp-controller="Home" asp-action="Error404">404</a></li>
-        <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
-        <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
-        <li><a asp-controller="Issue" asp-action="Index">Issues</a></li>
-        <li><a asp-controller="Home" asp-action="Login">Вход</a></li>
-        <li><a asp-controller="Home" asp-action="Register">Регистрация</a></li>
+
+            <li><a asp-controller="Home" asp-action="Error404">404</a></li>
+            <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
+            <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
+            <li><a asp-controller="Issue" asp-action="Index">Issues</a></li>
+            <li><a asp-controller="Account" asp-action="Login">Вход</a></li>
+            <li><a asp-controller="Account" asp-action="Register">Регистрация</a></li>
     </ul>
 </div>*@
