--- a/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -7,7 +7,8 @@
                 <li><a asp-controller="Catalog" asp-action="Shop">Каталог товаров</a></li>
             </ul>
         </li>
-        <li class="dropdown">
+
+        @*<li class="dropdown">
             <a href="#">Блоги<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a asp-controller="Home" asp-action="Blog">Список блогов</a></li>
@@ -15,10 +16,16 @@
             </ul>
         </li>
         <li><a asp-controller="Home" asp-action="Error404">404</a></li>
-        <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>
+        <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>*@
+
         <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
         <li><a asp-controller="Issue" asp-action="Index">Issues</a></li>
         <li><a asp-controller="Account" asp-action="Logout">Выход</a></li>
         <li><a asp-controller="Account" asp-action="Profile">@User.Identity.Name</a></li>
-    </ul>
+        @if (User.IsInRole(FinDesk.Domain.Identity.Role.Administrator))
+        {
+        <li><a href="#">Админка<i class="fa fa-key"></i></a></li>
+        }
+
+</ul>
 </div>
