--- a/FinDesk2/Views/Shared/Partial/_Header.cshtml
+++ b/FinDesk2/Views/Shared/Partial/_Header.cshtml
@@ -8,7 +8,6 @@
                 </div>
             </div>
             <div class="col-sm-8">
-                <vc:user-info />
             </div>
         </div>
     </div>
@@ -34,4 +33,4 @@
         </div>
     </div>
 </div><!--/header-bottom-->
-</header><!--/header-->
+<!--/header-->
