Область администратора - развитие

--- a/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -24,7 +24,7 @@
         <li><a asp-controller="Account" asp-action="Profile">@User.Identity.Name</a></li>
         @if (User.IsInRole(FinDesk.Domain.Identity.Role.Administrator))
         {
-        <li><a href="#">Админка<i class="fa fa-key"></i></a></li>
+        <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">Админка<i class="fa fa-key"></i></a></li>
         }
 
 </ul>
