Список BaseIssues в области администратора

--- a/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -53,19 +53,20 @@
         <nav class="navbar-default navbar-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav" id="main-menu">
-                                                @*<li>
-                                                    <a asp-action="Index" asp-controller="Home" asp-area="Admin"><i class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
-                                                </li>
-                                                <li>
-                                                    <a asp-action="Index" asp-controller="Products" asp-area="Admin"><i class="fa fa-edit "></i>Список товаров  <span class="badge">Included</span></a>
-                                                </li>*@
+                    @*<li>
+            <a asp-action="Index" asp-controller="Home" asp-area="Admin"><i class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
+        </li>
+                    *@
+                    <li>
+                        <a asp-action="Index" asp-controller="BaseIssues" asp-area="Admin"><i class="fa fa-edit "></i>Список товаров  <span class="badge">Included</span></a>
+                    </li>
                     @*<li class="active-link">
-                            <a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a>
-                        </li>
+            <a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a>
+        </li>
 
-                        <li>
-                            <a href="#"><i class="fa fa-qrcode "></i>My Link One</a>
-                        </li>*@
+        <li>
+            <a href="#"><i class="fa fa-qrcode "></i>My Link One</a>
+        </li>*@
                 </ul>
             </div>
 
