--- a/FinDesk2/Areas/Admin/Views/_ViewImports.cshtml
+++ b/FinDesk2/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using FinDesk2.Models
 @using FinDesk2.ViewModels
 @using FinDesk2.ViewModels.Identity
+@using FinDesk.Domain.Entities;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, FinDesk2
