Update 3 Косметические корректировки (добавление Selected List)  и другие

--- a/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FinDesk2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - FinDesk2</title>
+    <title>@ViewData["Title"] - FinDesk</title>
 
     <!-- BOOTSTRAP STYLES-->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -58,7 +58,7 @@
         </li>
                     *@
                     <li>
-                        <a asp-action="Index" asp-controller="BaseIssues" asp-area="Admin"><i class="fa fa-edit "></i>Список товаров  <span class="badge">Included</span></a>
+                        <a asp-action="Index" asp-controller="BaseIssues" asp-area="Admin"><i class="fa fa-edit "></i>Список запросов</a>
                     </li>
                     @*<li class="active-link">
             <a href="ui.html"><i class="fa fa-table "></i>UI Elements  <span class="badge">Included</span></a>
