--- a/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/FinDesk2/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -1,12 +1,14 @@
-﻿<div class="mainmenu pull-left">
+﻿<div class="mainmenu pull-right">
     <ul class="nav navbar-nav collapse navbar-collapse">
+        <li><a href="">Пользователь: @User.Identity.Name</a></li>
+        @*<li><a asp-controller="Account" asp-action="Profile">Пользователь: @User.Identity.Name</a></li>*@
         <li><a asp-controller="Home" asp-action="Index" class="active">Главная</a></li>
-        <li class="dropdown">
+        @*<li class="dropdown">
             <a asp-controller="Catalog" asp-action="Shop">Магазин<i class="fa fa-angle-down"></i></a>
             <ul role="menu" class="sub-menu">
                 <li><a asp-controller="Catalog" asp-action="Shop">Каталог товаров</a></li>
             </ul>
-        </li>
+        </li>*@
 
         @*<li class="dropdown">
             <a href="#">Блоги<i class="fa fa-angle-down"></i></a>
@@ -18,14 +20,14 @@
         <li><a asp-controller="Home" asp-action="Error404">404</a></li>
         <li><a asp-controller="Home" asp-action="ContactUs">Контакты</a></li>*@
 
-        <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
+        @*<li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>*@
         <li><a asp-controller="Issue" asp-action="Index">Issues</a></li>
-        <li><a asp-controller="Account" asp-action="Logout">Выход</a></li>
-        <li><a asp-controller="Account" asp-action="Profile">@User.Identity.Name</a></li>
         @if (User.IsInRole(FinDesk.Domain.Identity.Role.Administrator))
         {
-        <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">Админка<i class="fa fa-key"></i></a></li>
+            <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">Админка<i class="fa fa-key"></i></a></li>
         }
+        <li><a asp-controller="Account" asp-action="Logout">Выход</a></li>
 
-</ul>
+
+    </ul>
 </div>
