--- a/FinDesk2/Areas/Admin/Views/Home/Index.cshtml
+++ b/FinDesk2/Areas/Admin/Views/Home/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Входящие запросы";
 }
 
 <!-- /. ROW  -->
 <hr />
-<div class="row">
+@*<div class="row">
     <div class="col-lg-12 ">
         <div class="alert alert-info">
             <strong>Welcome Jhon Doe ! </strong> You Have No pending Task For Today.
         </div>
 
     </div>
-</div>
+</div>*@
 <!-- /. ROW  -->
 <div class="row text-center pad-top">
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
