--- a/FinDesk2/Views/Home/Index.cshtml
+++ b/FinDesk2/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "FinDesk - Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to FinDesk portal </h1>
 </div>
